--- a/.github/workflows/common_bits.yml
+++ b/.github/workflows/common_bits.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CommonBits
+name: common_bits
 
 # Controls when the workflow will run
 on:
